--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,28 +1,3 @@
-# First two stages are for testing shell script syntax and format.
-FROM koalaman/shellcheck-alpine:stable
-
-WORKDIR /mnt
-
-# Copy in the whole project for analysis.
-COPY ./ ./
-
-RUN shellcheck --shell sh --color dab $(find . -name '*.sh' -type f)
-
-# Second analysis stage runs shfmt to ensure a consistent style.
-FROM golang:alpine
-
-# Install shfmt https://github.com/mvdan/sh and git.
-RUN apk add --no-cache git \
- && go get -v mvdan.cc/sh/cmd/shfmt/...
-
-# Copy in the whole project for analysis.
-COPY ./app ./
-
-# display diffs of any files that do not conform to a posix compliant
-# simplified style.
-RUN shfmt -d -ln=posix -s .
-
-# Final stage prepares an image to run aruba via cucumber.
 FROM ruby:2.5
 
 # Install docker-ce.
@@ -47,7 +22,7 @@ RUN apt-get update \
 WORKDIR /usr/src/app
 
 # Build deps in seperate layer to utilize docker caching.
-COPY tests/Gemfile* ./
+COPY ./Gemfile* ./
 # error if Gemfile has been modified since Gemfile.lock was last updated.
 RUN bundle config --global frozen 1 \
  && bundle install
@@ -56,9 +31,6 @@ COPY ./features ./features
 
 # Check to ensure feature files are well formatted.
 RUN cucumber_lint
-
-# Only copy in the wrapper script to approximate the end user experience.
-COPY ./dab ./dab
 
 ENTRYPOINT ["/usr/local/bundle/bin/cucumber","--color","--fail-fast","--strict","--guess","--verbose"]
 # Allows targeting of specific features via the command input.
