--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ language: nix
 services:
   - docker
 
-
 git:
   quiet: true
 
@@ -19,9 +18,7 @@ jobs:
 
     - stage: Danger
       name: Danger Checks
-      script:
-        - yarn install
-        - yarn danger ci
+      script: ./scripts/danger.sh
 
     - stage: Tests
       name: Behaviour Tests
