Add network subcommand
- add network subcommand
- replaces compose entrypoint with command
- config set and add can take any number of params

Fixes #5

--- a/app/docker/docker-compose.tools.yml
+++ b/app/docker/docker-compose.tools.yml
@@ -261,10 +261,6 @@ networks:
   observability:
   public:
   lab:
-    name: lab
-    driver_opts:
-      com.docker.network.bridge.enable_ip_masquerade: "${DAB_LAB_INTERNET:-false}"
-    ipam:
-      driver: default
-      config:
-        - subnet: "${DAB_LAB_SUBNET:-10.10.0.0/16}"
+    external:
+      name: lab
+
