Configure grafana influxdb datasoruces

--- a/app/docker/docker-compose.tools.yml
+++ b/app/docker/docker-compose.tools.yml
@@ -192,9 +192,13 @@ services:
       - /usr:/host/usr:ro
 
   grafana:
-    image: grafana/grafana:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.grafana
     labels:
       com.centurylinklabs.watchtower.enable: 'true'
+    depends_on:
+      - influxdb
     networks:
       - observability
     volumes:
