--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -17,10 +17,11 @@ services:
       DAB_AUTOUPDATE: 'no'
       DAB_UID: '0'
       DAB_GID: '0'
+      DAB_WRAPPER_PATH: "${PWD}/dab"
     user: '0:0'
     volumes:
       - ./features:/usr/src/app/features
       - /etc/group:/etc/group:ro
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/dab:/tmp/dab
-      - ../dab:/bin/dab:ro
+      - ../dab:/bin/dab
