Close a bunch of issues
See the changelog updates

Fixes #48
Fixes #46
Fixes #44
Fixes #43
Fixes #45

--- a/app/docker/docker-compose.tools.yml
+++ b/app/docker/docker-compose.tools.yml
@@ -306,6 +306,8 @@ services:
       retries: 3
     ports:
       - 8200
+    environment:
+      VAULT_ADDR: 'http://127.0.0.1:8200'
     cap_add:
       - IPC_LOCK
     depends_on:
