--- a/app/docker/docker-compose.tools.yml
+++ b/app/docker/docker-compose.tools.yml
@@ -15,6 +15,8 @@ services:
       interval: 1m
       timeout: 10s
       retries: 3
+    tmpfs:
+      - /tmp
 
   portainer:
     image: "portainer/portainer:${DAB_TOOLS_PORTAINER_TAG:-latest}"
@@ -26,6 +28,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer:/data
+    tmpfs:
+      - /tmp
 
   tick:
     image: "chronograf:${DAB_TOOLS_CHRONOGRAF_TAG:-alpine}"
@@ -53,6 +57,8 @@ services:
       interval: 1m
       timeout: 10s
       retries: 3
+    tmpfs:
+      - /tmp
 
   telegraf:
     build:
@@ -76,6 +82,8 @@ services:
       interval: 1m
       timeout: 10s
       retries: 3
+    tmpfs:
+      - /tmp
 
   influxdb:
     image: "influxdb:${DAB_TOOLS_INFLUXDB_TAG:-alpine}"
@@ -92,6 +100,8 @@ services:
       interval: 1m
       timeout: 10s
       retries: 3
+    tmpfs:
+      - /tmp
 
   kapacitor:
     image: "kapacitor:${DAB_TOOLS_KAPACITOR_TAG:-alpine}"
@@ -115,6 +125,8 @@ services:
       interval: 1m
       timeout: 10s
       retries: 3
+    tmpfs:
+      - /tmp
 
   traefik:
     image: "traefik:${DAB_TOOLS_TRAEFIK_TAG:-alpine}"
@@ -144,6 +156,8 @@ services:
       interval: 1m
       timeout: 10s
       retries: 3
+    tmpfs:
+      - /tmp
 
   ngrok:
     build:
@@ -160,6 +174,8 @@ services:
       interval: 1m
       timeout: 10s
       retries: 3
+    tmpfs:
+      - /tmp
 
   logspout:
     image: "gliderlabs/logspout:${DAB_TOOLS_LOGSPOUT_TAG:-latest}"
@@ -176,6 +192,8 @@ services:
       - 80
     environment:
       INACTIVITY_TIMEOUT: 1m
+    tmpfs:
+      - /tmp
 
   watchtower:
     image: v2tec/watchtower:latest
@@ -184,6 +202,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     command: --cleanup --label-enable
+    tmpfs:
+      - /tmp
 
   sysdig:
     image: "sysdig/sysdig:${DAB_TOOLS_SYSDIG_TAG:-latest}"
@@ -194,6 +214,8 @@ services:
       - /boot:/host/boot:ro
       - /lib/modules:/host/lib/modules:ro
       - /usr:/host/usr:ro
+    tmpfs:
+      - /tmp
 
   grafana:
     build:
@@ -218,6 +240,8 @@ services:
       interval: 1m
       timeout: 10s
       retries: 3
+    tmpfs:
+      - /tmp
 
   consul:
     image: "consul:${DAB_TOOLS_CONSUL_TAG:-latest}"
@@ -245,6 +269,8 @@ services:
       interval: 1m
       timeout: 10s
       retries: 3
+    tmpfs:
+      - /tmp
 
   serveo:
     build:
@@ -258,6 +284,8 @@ services:
       - 'serveo.net'
     networks:
       - public
+    tmpfs:
+      - /tmp
 
   ntopng:
     build:
@@ -270,11 +298,15 @@ services:
       - redis
     restart: on-failure
     command: --redis localhost:16379
+    tmpfs:
+      - /tmp
 
   redis:
     image: "redis:${DAB_TOOLS_REDIS_TAG:-latest}"
     ports:
       - '16379:6379'
+    tmpfs:
+      - /tmp
 
   vaultbot:
     image: "msvechla/vaultbot:${DAB_TOOLS_VAULTBOT_TAG:-latest}"
@@ -285,6 +317,8 @@ services:
       - vault
     depends_on:
       - vault
+    tmpfs:
+      - /tmp
 
   vault:
     build:
@@ -313,6 +347,8 @@ services:
     depends_on:
       - consul
       - telegraf
+    tmpfs:
+      - /tmp
 
 volumes:
   influxdb:
