Add services subcommand
Provides common services like redis and postgres

Fixes #38

--- a/app/docker/docker-compose.network.yml
+++ b/app/docker/docker-compose.network.yml
@@ -5,10 +5,13 @@ services:
     image: alpine:latest
     networks:
       - lab
+      - services
     tmpfs:
       - /tmp
 
 networks:
+  services:
+    name: services
   lab:
     name: lab
     driver_opts:
