--- a/app/docker/configs/telegraf.conf
+++ b/app/docker/configs/telegraf.conf
@@ -2734,18 +2734,18 @@
 #   urls = ["http://localhost:8080/_raindrops"]
 
 
-# # Read metrics from one or many redis servers
-# [[inputs.redis]]
-#   ## specify servers via a url matching:
-#   ##  [protocol://][:password]@address[:port]
-#   ##  e.g.
-#   ##    tcp://localhost:6379
-#   ##    tcp://:password@192.168.99.100
-#   ##    unix:///var/run/redis.sock
-#   ##
-#   ## If no servers are specified, then localhost is used as the host.
-#   ## If no port is specified, 6379 is used
-#   servers = ["tcp://localhost:6379"]
+# Read metrics from one or many redis servers
+[[inputs.redis]]
+  ## specify servers via a url matching:
+  ##  [protocol://][:password]@address[:port]
+  ##  e.g.
+  ##    tcp://localhost:6379
+  ##    tcp://:password@192.168.99.100
+  ##    unix:///var/run/redis.sock
+  ##
+  ## If no servers are specified, then localhost is used as the host.
+  ## If no port is specified, 6379 is used
+  servers = ["tcp://redis:6379"]
 
 
 # # Read metrics from one or many RethinkDB servers
@@ -3588,39 +3588,39 @@
 #   data_format = "influx"
 
 
-# # Read metrics from one or many postgresql servers
-# [[inputs.postgresql]]
-#   ## specify address via a url matching:
-#   ##   postgres://[pqgotest[:password]]@localhost[/dbname]\
-#   ##       ?sslmode=[disable|verify-ca|verify-full]
-#   ## or a simple string:
-#   ##   host=localhost user=pqotest password=... sslmode=... dbname=app_production
-#   ##
-#   ## All connection parameters are optional.
-#   ##
-#   ## Without the dbname parameter, the driver will default to a database
-#   ## with the same name as the user. This dbname is just for instantiating a
-#   ## connection with the server and doesn't restrict the databases we are trying
-#   ## to grab metrics for.
-#   ##
-#   address = "host=localhost user=postgres sslmode=disable"
-#   ## A custom name for the database that will be used as the "server" tag in the
-#   ## measurement output. If not specified, a default one generated from
-#   ## the connection address is used.
-#   # outputaddress = "db01"
-#
-#   ## connection configuration.
-#   ## maxlifetime - specify the maximum lifetime of a connection.
-#   ## default is forever (0s)
-#   max_lifetime = "0s"
-#
-#   ## A  list of databases to explicitly ignore.  If not specified, metrics for all
-#   ## databases are gathered.  Do NOT use with the 'databases' option.
-#   # ignored_databases = ["postgres", "template0", "template1"]
-#
-#   ## A list of databases to pull metrics about. If not specified, metrics for all
-#   ## databases are gathered.  Do NOT use with the 'ignored_databases' option.
-#   # databases = ["app_production", "testing"]
+# Read metrics from one or many postgresql servers
+[[inputs.postgresql]]
+  ## specify address via a url matching:
+  ##   postgres://[pqgotest[:password]]@localhost[/dbname]\
+  ##       ?sslmode=[disable|verify-ca|verify-full]
+  ## or a simple string:
+  ##   host=localhost user=pqotest password=... sslmode=... dbname=app_production
+  ##
+  ## All connection parameters are optional.
+  ##
+  ## Without the dbname parameter, the driver will default to a database
+  ## with the same name as the user. This dbname is just for instantiating a
+  ## connection with the server and doesn't restrict the databases we are trying
+  ## to grab metrics for.
+  ##
+  address = "host=postgres user=postgres sslmode=disable"
+  ## A custom name for the database that will be used as the "server" tag in the
+  ## measurement output. If not specified, a default one generated from
+  ## the connection address is used.
+  # outputaddress = "db01"
+
+  ## connection configuration.
+  ## maxlifetime - specify the maximum lifetime of a connection.
+  ## default is forever (0s)
+  max_lifetime = "0s"
+
+  ## A  list of databases to explicitly ignore.  If not specified, metrics for all
+  ## databases are gathered.  Do NOT use with the 'databases' option.
+  ignored_databases = ["postgres", "template0", "template1"]
+
+  ## A list of databases to pull metrics about. If not specified, metrics for all
+  ## databases are gathered.  Do NOT use with the 'ignored_databases' option.
+  # databases = ["app_production", "testing"]
 
 
 # # Read metrics from one or many postgresql servers
