Add features2html to generate docs from feature files
Generating static html docs features2html takes test files
and outputs easy to read documentation.

Fixes #56

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -26,3 +26,15 @@ services:
     working_dir: /opt/dab/tests
     volumes:
       - ../:/opt/dab:ro
+
+  docs:
+    build: .
+    user: "${UID:-1000}:${GID:-1000}"
+    volumes:
+      - ./features/:/usr/src/app/features
+      - ./docs/templates/:/usr/src/app/templates
+      - ./docs/:/usr/src/app/output
+
+volumes:
+  data:
+  sock:
