Add elasticsearch to services
Also make telegraf quiet

--- a/app/docker/Dockerfile.grafana
+++ b/app/docker/Dockerfile.grafana
@@ -1,4 +1,4 @@
 ARG GRAFANA_TAG=latest
 FROM "grafana/grafana:$GRAFANA_TAG"
 
-COPY configs/grafana-influxdb-datasources.yml /etc/grafana/provisioning/datasources/
+COPY configs/grafana-*-datasources.yml /etc/grafana/provisioning/datasources/
