--- a/app/docker/configs/telegraf.conf
+++ b/app/docker/configs/telegraf.conf
@@ -1602,45 +1602,45 @@
 #   filters = [""]
 
 
-# # Read stats from one or more Elasticsearch servers or clusters
-# [[inputs.elasticsearch]]
-#   ## specify a list of one or more Elasticsearch servers
-#   # you can add username and password to your url to use basic authentication:
-#   # servers = ["http://user:pass@localhost:9200"]
-#   servers = ["http://localhost:9200"]
-#
-#   ## Timeout for HTTP requests to the elastic search server(s)
-#   http_timeout = "5s"
-#
-#   ## When local is true (the default), the node will read only its own stats.
-#   ## Set local to false when you want to read the node stats from all nodes
-#   ## of the cluster.
-#   local = true
-#
-#   ## Set cluster_health to true when you want to also obtain cluster health stats
-#   cluster_health = false
-#
-#   ## Adjust cluster_health_level when you want to also obtain detailed health stats
-#   ## The options are
-#   ##  - indices (default)
-#   ##  - cluster
-#   # cluster_health_level = "indices"
-#
-#   ## Set cluster_stats to true when you want to also obtain cluster stats from the
-#   ## Master node.
-#   cluster_stats = false
-#
-#   ## node_stats is a list of sub-stats that you want to have gathered. Valid options
-#   ## are "indices", "os", "process", "jvm", "thread_pool", "fs", "transport", "http",
-#   ## "breaker". Per default, all stats are gathered.
-#   # node_stats = ["jvm", "http"]
-#
-#   ## Optional TLS Config
-#   # tls_ca = "/etc/telegraf/ca.pem"
-#   # tls_cert = "/etc/telegraf/cert.pem"
-#   # tls_key = "/etc/telegraf/key.pem"
-#   ## Use TLS but skip chain & host verification
-#   # insecure_skip_verify = false
+# Read stats from one or more Elasticsearch servers or clusters
+[[inputs.elasticsearch]]
+  ## specify a list of one or more Elasticsearch servers
+  # you can add username and password to your url to use basic authentication:
+  # servers = ["http://user:pass@localhost:9200"]
+  servers = ["http://elasticsearch:9200"]
+
+  ## Timeout for HTTP requests to the elastic search server(s)
+  http_timeout = "5s"
+
+  ## When local is true (the default), the node will read only its own stats.
+  ## Set local to false when you want to read the node stats from all nodes
+  ## of the cluster.
+  local = true
+
+  ## Set cluster_health to true when you want to also obtain cluster health stats
+  cluster_health = false
+
+  ## Adjust cluster_health_level when you want to also obtain detailed health stats
+  ## The options are
+  ##  - indices (default)
+  ##  - cluster
+  # cluster_health_level = "indices"
+
+  ## Set cluster_stats to true when you want to also obtain cluster stats from the
+  ## Master node.
+  cluster_stats = false
+
+  ## node_stats is a list of sub-stats that you want to have gathered. Valid options
+  ## are "indices", "os", "process", "jvm", "thread_pool", "fs", "transport", "http",
+  ## "breaker". Per default, all stats are gathered.
+  # node_stats = ["jvm", "http"]
+
+  ## Optional TLS Config
+  # tls_ca = "/etc/telegraf/ca.pem"
+  # tls_cert = "/etc/telegraf/cert.pem"
+  # tls_key = "/etc/telegraf/key.pem"
+  ## Use TLS but skip chain & host verification
+  # insecure_skip_verify = false
 
 
 # # Read metrics from one or more commands that can output to stdout
