Add kafka to services
Plus zookeeper

--- a/app/docker/configs/telegraf.conf
+++ b/app/docker/configs/telegraf.conf
@@ -1234,38 +1234,38 @@
 # [[inputs.burrow]]
 #   ## Burrow API endpoints in format "schema://host:port".
 #   ## Default is "http://localhost:8000".
-#   servers = ["http://localhost:8000"]
-#
+#   servers = ["http://burrow:8000"]
+# 
 #   ## Override Burrow API prefix.
 #   ## Useful when Burrow is behind reverse-proxy.
 #   # api_prefix = "/v3/kafka"
-#
+# 
 #   ## Maximum time to receive response.
 #   # response_timeout = "5s"
-#
+# 
 #   ## Limit per-server concurrent connections.
 #   ## Useful in case of large number of topics or consumer groups.
 #   # concurrent_connections = 20
-#
+# 
 #   ## Filter clusters, default is no filtering.
 #   ## Values can be specified as glob patterns.
 #   # clusters_include = []
 #   # clusters_exclude = []
-#
+# 
 #   ## Filter consumer groups, default is no filtering.
 #   ## Values can be specified as glob patterns.
 #   # groups_include = []
 #   # groups_exclude = []
-#
+# 
 #   ## Filter topics, default is no filtering.
 #   ## Values can be specified as glob patterns.
 #   # topics_include = []
 #   # topics_exclude = []
-#
+# 
 #   ## Credentials for basic HTTP authentication.
 #   # username = ""
 #   # password = ""
-#
+# 
 #   ## Optional SSL config
 #   # ssl_ca = "/etc/telegraf/ca.pem"
 #   # ssl_cert = "/etc/telegraf/cert.pem"
@@ -1391,20 +1391,20 @@
 #   #    value = "p-example"
 
 
-# # Collects conntrack stats from the configured directories and files.
-# [[inputs.conntrack]]
-#    ## The following defaults would work with multiple versions of conntrack.
-#    ## Note the nf_ and ip_ filename prefixes are mutually exclusive across
-#    ## kernel versions, as are the directory locations.
-#
-#    ## Superset of filenames to look for within the conntrack dirs.
-#    ## Missing files will be ignored.
-#    files = ["ip_conntrack_count","ip_conntrack_max",
-#             "nf_conntrack_count","nf_conntrack_max"]
-#
-#    ## Directories to search within for the conntrack files above.
-#    ## Missing directrories will be ignored.
-#    dirs = ["/proc/sys/net/ipv4/netfilter","/proc/sys/net/netfilter"]
+# Collects conntrack stats from the configured directories and files.
+[[inputs.conntrack]]
+   ## The following defaults would work with multiple versions of conntrack.
+   ## Note the nf_ and ip_ filename prefixes are mutually exclusive across
+   ## kernel versions, as are the directory locations.
+
+   ## Superset of filenames to look for within the conntrack dirs.
+   ## Missing files will be ignored.
+   files = ["ip_conntrack_count","ip_conntrack_max",
+            "nf_conntrack_count","nf_conntrack_max"]
+
+   ## Directories to search within for the conntrack files above.
+   ## Missing directrories will be ignored.
+   dirs = ["/proc/sys/net/ipv4/netfilter","/proc/sys/net/netfilter"]
 
 
 # Gather health check statuses from services registered in Consul
@@ -1414,28 +1414,28 @@
 
   ## URI scheme for the Consul server, one of "http", "https"
   scheme = "http"
-#
-#   ## ACL token used in every request
-#   # token = ""
-#
-#   ## HTTP Basic Authentication username and password.
-#   # username = ""
-#   # password = ""
-#
-#   ## Data centre to query the health checks from
-#   # datacentre = ""
-#
-#   ## Optional TLS Config
-#   # tls_ca = "/etc/telegraf/ca.pem"
-#   # tls_cert = "/etc/telegraf/cert.pem"
-#   # tls_key = "/etc/telegraf/key.pem"
-#   ## Use TLS but skip chain & host verification
-#   # insecure_skip_verify = true
-#
-#   ## Consul checks' tag splitting
-#   # When tags are formatted like "key:value" with ":" as a delimiter then
-#   # they will be splitted and reported as proper key:value in Telegraf
-#   # tag_delimiter = ":"
+
+  ## ACL token used in every request
+  # token = ""
+
+  ## HTTP Basic Authentication username and password.
+  # username = ""
+  # password = ""
+
+  ## Data centre to query the health checks from
+  # datacentre = ""
+
+  ## Optional TLS Config
+  # tls_ca = "/etc/telegraf/ca.pem"
+  # tls_cert = "/etc/telegraf/cert.pem"
+  # tls_key = "/etc/telegraf/key.pem"
+  ## Use TLS but skip chain & host verification
+  # insecure_skip_verify = true
+
+  ## Consul checks' tag splitting
+  # When tags are formatted like "key:value" with ":" as a delimiter then
+  # they will be splitted and reported as proper key:value in Telegraf
+  # tag_delimiter = ":"
 
 
 # # Read metrics from one or many couchbase clusters
@@ -3209,25 +3209,25 @@
 #   # poolMetrics = false
 
 
-# # Reads 'mntr' stats from one or many zookeeper servers
-# [[inputs.zookeeper]]
-#   ## An array of address to gather stats about. Specify an ip or hostname
-#   ## with port. ie localhost:2181, 10.0.0.1:2181, etc.
-#
-#   ## If no servers are specified, then localhost is used as the host.
-#   ## If no port is specified, 2181 is used
-#   servers = [":2181"]
-#
-#   ## Timeout for metric collections from all servers.  Minimum timeout is "1s".
-#   # timeout = "5s"
-#
-#   ## Optional TLS Config
-#   # enable_tls = true
-#   # tls_ca = "/etc/telegraf/ca.pem"
-#   # tls_cert = "/etc/telegraf/cert.pem"
-#   # tls_key = "/etc/telegraf/key.pem"
-#   ## If false, skip chain & host verification
-#   # insecure_skip_verify = true
+# Reads 'mntr' stats from one or many zookeeper servers
+[[inputs.zookeeper]]
+  ## An array of address to gather stats about. Specify an ip or hostname
+  ## with port. ie localhost:2181, 10.0.0.1:2181, etc.
+
+  ## If no servers are specified, then localhost is used as the host.
+  ## If no port is specified, 2181 is used
+  servers = ["zookeeper:2181"]
+
+  ## Timeout for metric collections from all servers.  Minimum timeout is "1s".
+  # timeout = "5s"
+
+  ## Optional TLS Config
+  # enable_tls = true
+  # tls_ca = "/etc/telegraf/ca.pem"
+  # tls_cert = "/etc/telegraf/cert.pem"
+  # tls_key = "/etc/telegraf/key.pem"
+  ## If false, skip chain & host verification
+  # insecure_skip_verify = true
 
 
 
