--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,4 @@ jobs:
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run:
           name: Acceptance Tests
-          command: ./scripts/test.sh --retry=1 --order=random
+          command: ./scripts/test.sh
