Update group services and tools before starting them
Also remove building tools and services every start

Fixes #96

--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -6,6 +6,10 @@ services:
     build:
       context: ../
       dockerfile: Dockerfile
+      cache_from:
+        - 'alpine:latest'
+        - 'golang:latest'
+        - 'nekroze/dab:latest'
     image: nekroze/dab:latest
     depends_on:
       - docker
